--- a/Bootstrap/Tutorial 18 - Jumbotron/index-bs5.html
+++ b/Bootstrap/Tutorial 18 - Jumbotron/index-bs5.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
+		  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 	<style>
 		.red
 		{
@@ -32,7 +32,7 @@
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 				<br />
 				
-				<div class="p-5 bg-danger rounded-3">
+				<div class="p-5 bg-secondary-subtle rounded-3">
 					<div class="container-fluid py-5">
 						
 						<h1 class="display-3">This is a awesome Title</h1>
