--- a/Bootstrap/Tutorial 23 - Card Text Alignment/index-bs5.html
+++ b/Bootstrap/Tutorial 23 - Card Text Alignment/index-bs5.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
-	<style>
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+		<style>
 		.red
 		{
 			color: white;
@@ -41,7 +41,7 @@
 			</ul>
 			
 			
-			<div class="card-body text-end">
+			<div class="card-body text-center">
 				<h4 class="card-title">This is a title</h4>
 				<p class="card-text">Each merged squad salts the wild porter. Should the charmed church dodge a camera? The gown litters the rhyme. Another discrete elevator defects over the target.</p>
 				<a href="http://sonarsystems.co.uk" class="btn btn-success">Button</a>
