--- a/Bootstrap/Tutorial 38 - Navbar Placement/index-bs5.html
+++ b/Bootstrap/Tutorial 38 - Navbar Placement/index-bs5.html
@@ -5,8 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-	crossorigin="anonymous" />
+	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 	<style>
 		.red
 		{
@@ -21,7 +20,7 @@
 		}
 		
 		.blue
-		{
+		{https://d2d3qesrx8xj6s.cloudfront.net/img/screenshots/dee80acbefe80b21aaddce829c34f6b38153ef66.jpeg
 			color: white;
 			background-color: blue;
 		}
@@ -109,9 +108,41 @@
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>        <div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>        <div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>        <div
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>        <div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>        <div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
+			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
 			<div>iuwe wie w eci ow woc owc o wco woiec woeoweoc ocw</div>
