--- a/Bootstrap/Tutorial 47 - Modals/index-bs5.html
+++ b/Bootstrap/Tutorial 47 - Modals/index-bs5.html
@@ -5,8 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+	
 </head>
 <body>
 	<div class="container">
@@ -27,7 +28,7 @@
 				<div class="modal-header">
 					
 					<h4 class="modal-title" id="ModelNameLabel">Awesome Title It Is :D</h4>
-					<button type="button" class="close" data-bs-dismiss="modal" role="button" aria-controls="ModelName" aria-label="Close">
+					<button type="button" class="btn-close" data-bs-dismiss="modal" role="button" aria-controls="ModelName" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 						<span class="visually-hidden">Close</span>
 					</button>
